--- a/report.html
+++ b/report.html
@@ -11,7 +11,7 @@
 
 
 
-<title>map.utf8</title>
+<title>report</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -19,9 +19,6 @@
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
-<script src="site_libs/jqueryui-1.11.4/jquery-ui.min.js"></script>
-<link href="site_libs/tocify-1.9.1/jquery.tocify.css" rel="stylesheet" />
-<script src="site_libs/tocify-1.9.1/jquery.tocify.js"></script>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
@@ -253,69 +250,6 @@ $(document).ready(function () {
 
 
 
-<style type="text/css">
-
-#TOC {
-  margin: 25px 0px 20px 0px;
-}
-@media (max-width: 768px) {
-#TOC {
-  position: relative;
-  width: 100%;
-}
-}
-
-@media print {
-.toc-content {
-  /* see https://github.com/w3c/csswg-drafts/issues/4434 */
-  float: right;
-}
-}
-
-.toc-content {
-  padding-left: 30px;
-  padding-right: 40px;
-}
-
-div.main-container {
-  max-width: 1200px;
-}
-
-div.tocify {
-  width: 20%;
-  max-width: 260px;
-  max-height: 85%;
-}
-
-@media (min-width: 768px) and (max-width: 991px) {
-  div.tocify {
-    width: 25%;
-  }
-}
-
-@media (max-width: 767px) {
-  div.tocify {
-    width: 100%;
-    max-width: none;
-  }
-}
-
-.tocify ul, .tocify li {
-  line-height: 20px;
-}
-
-.tocify-subheader .tocify-item {
-  font-size: 0.90em;
-}
-
-.tocify .list-group-item {
-  border-radius: 0px;
-}
-
-
-</style>
-
-
 
 </head>
 
@@ -323,16 +257,6 @@ div.tocify {
 
 
 <div class="container-fluid main-container">
-
-
-<!-- setup 3col/9col grid for toc_float and main content  -->
-<div class="row-fluid">
-<div class="col-xs-12 col-sm-4 col-md-3">
-<div id="TOC" class="tocify">
-</div>
-</div>
-
-<div class="toc-content col-xs-12 col-sm-8 col-md-9">
 
 
 
@@ -379,16 +303,112 @@ div.tocify {
 
 
 
+<h1 class="title toc-ignore">report</h1>
 
 </div>
 
 
+<pre class="r"><code>library(tidyverse)
+library(leaflet)
+library(ggplot2)
+library(plotly)
+library(readxl)
 
+knitr::opts_chunk$set(
+  fig.width = 6,
+  fig.asp = .6,
+  out.width = &quot;90%&quot;
+)
+theme_set(theme_minimal() + theme(legend.position = &quot;bottom&quot;))
+options(
+  ggplot2.continuous.colour = &quot;viridis&quot;,
+  ggplot2.continuous.fill = &quot;viridis&quot;
+)
+scale_colour_discrete = scale_color_viridis_d
+scale_fill_discrete = scale_fill_viridis_d</code></pre>
+<pre class="r"><code>wine_df = 
+  read_csv(
+  &quot;./wine_data/tidy/wine_all.csv&quot;)</code></pre>
+<pre><code>## Warning: Missing column names filled in: &#39;X1&#39; [1]</code></pre>
+<pre><code>## Warning: Duplicated column names deduplicated: &#39;X1&#39; =&gt; &#39;X1_1&#39; [2]</code></pre>
+<pre><code>## Parsed with column specification:
+## cols(
+##   X1 = col_double(),
+##   X1_1 = col_double(),
+##   country = col_character(),
+##   description = col_character(),
+##   designation = col_character(),
+##   points = col_double(),
+##   price = col_double(),
+##   province = col_character(),
+##   region_1 = col_character(),
+##   taster_name = col_character(),
+##   title = col_character(),
+##   variety = col_character(),
+##   winery = col_character(),
+##   year = col_double(),
+##   type = col_character()
+## )</code></pre>
+<pre class="r"><code>### remove region 2, taster twitter and missing values in region 1.
 
-
-
+#wine_type &lt;- read_csv(&quot;./wine_data/winemag-data-130k-v2.csv&quot;) %&gt;% 
+#            group_by(variety) %&gt;% 
+#            count() %&gt;% 
+#            arrange(desc(n)) %&gt;% 
+#            as.tibble()</code></pre>
+<p>Your report should include the following topics. Depending on your project type the amount of discussion you devote to each of them will vary:</p>
+<div id="motivation" class="section level1">
+<h1>Motivation:</h1>
+<p>Provide an overview of the project goals and motivation.</p>
+<p>#Related work: Anything that inspired you, such as a paper, a web site, or something we discussed in class.</p>
+<p>#Initial questions: What questions are you trying to answer? How did these questions evolve over the course of the project? What new questions did you consider in the course of your analysis?</p>
+</div>
+<div id="data" class="section level1">
+<h1>Data:</h1>
+<p>Source, scraping method, cleaning, etc.</p>
+<p>The data for this project is downloaded from <a href="https://www.kaggle.com/zynicide/wine-reviews">Kaggle</a>. It was scraped on November 22nd, 2017 from the <a href="https://www.winemag.com/?s=&amp;drink_type=wine">WineEnthusiast Rating database</a>. Wine Enthusiast is a magazine provide information on wine quality, wine variety, tours and events—in short - everything about wine.</p>
+<p>This dataset contains 129971 wine reviews with variety, location, winery, price, description and reviewer information. There is much information on description and title on each wine. We had extracted from the text of useful information such as the year the wine was made in and the characteristics of the taste.</p>
+<div id="variables-of-interest" class="section level3">
+<h3><em>Variables of interest</em></h3>
+<div id="outcomes" class="section level5">
+<h5><strong>Outcomes</strong></h5>
+<ul>
+<li><code>price</code> . Count of evictions (or eviction filings) per year at the census tract level.</li>
+<li><code>rating</code>. Calculated using number of evictions or eviction filings divided by the number of <code>renter_occupied_households</code> and multiplied by 100, to be interpreted as a percentage.</li>
+</ul>
+</div>
+<div id="candidate-predictors" class="section level5">
+<h5><strong>Candidate Predictors</strong></h5>
+<ul>
+<li><code>years_since_2010</code>. Since our data range from 2010 to 2016, and we did not want to assume a constant effect of time, we included year as a set of indicator variables in all models except our empty model (see below).</li>
+<li><code>hisp</code>. Percent of population (at census tract level, for all race/ethnicity variables) that self-report Hispanic ethnicity.</li>
+<li><code>white</code>. Percent self-reporting White race.</li>
+<li><code>black</code>. Percent self-reporting Black race.</li>
+<li><code>asian</code>. Percent self-reporting Asian race.</li>
+<li><code>aian</code>. Percent self-reporting American Indian / Alaska Native race.</li>
+<li><code>nhpi</code>. Percent self-reporting Native Hawaiian / Pacific Islander race.</li>
+<li><code>other</code>. Percent self-reporting other race.</li>
+<li><code>rent_burden</code>. Average percent of income spent on rent.</li>
+<li><code>density</code>. Population density.</li>
+<li><code>pct_eng</code>. Percent of population who speak English less than ‘Very Well’. This is interpreted as a proxy for percent English as a second language (ESL) speakers.</li>
+<li><code>median_household_income</code>. Median census tract household income in USD.</li>
+<li><code>poverty_rate</code>. Percent living below Federal Poverty Line (FPL).</li>
+<li><code>median_gross_rent</code>. Median census tract gross rent in USD.</li>
+<li><code>pct_renter_occupied</code>. Percent of census tract occupied by renters.</li>
+<li><code>median_property_value</code>. Median census tract property value in USD.</li>
+<li><code>family_size</code>. Average family size in census tract.</li>
+<li><code>pct_fam_households</code>. Percentage of census tract households that contain families.</li>
+</ul>
+<p>At first, the dataset contains more than 50 wine varieties and it is hard to get useful information. Therefore, we had categorized all varieties to four types of wine: red, white, rose and sparkling according to the following infographics on <a href="https://winefolly.com/deep-dive/different-types-of-wine/">Wine Folly</a>.</p>
+<p>#Exploratory analysis: Visualizations, summaries, and exploratory statistical analyses. Justify the steps you took, and show any major changes to your ideas.</p>
+<p>#Additional analysis: If you undertake formal statistical analyses, describe these in detail</p>
+<p>#Discussion: What were your findings? Are they what you expect? What insights into the data can you make?</p>
 </div>
 </div>
+</div>
+
+
+
 
 </div>
 
@@ -421,32 +441,6 @@ $(document).ready(function () {
 
 <!-- code folding -->
 
-<script>
-$(document).ready(function ()  {
-
-    // move toc-ignore selectors from section div to header
-    $('div.section.toc-ignore')
-        .removeClass('toc-ignore')
-        .children('h1,h2,h3,h4,h5').addClass('toc-ignore');
-
-    // establish options
-    var options = {
-      selectors: "h1,h2,h3",
-      theme: "bootstrap3",
-      context: '.toc-content',
-      hashGenerator: function (text) {
-        return text.replace(/[.\\/?&!#<>]/g, '').replace(/\s/g, '_');
-      },
-      ignoreSelector: ".toc-ignore",
-      scrollTo: 0
-    };
-    options.showAndHide = true;
-    options.smoothScroll = true;
-
-    // tocify
-    var toc = $("#TOC").tocify(options).data("toc-tocify");
-});
-</script>
 
 <!-- dynamically load mathjax for compatibility with self-contained -->
 <script>
