--- a/index.html
+++ b/index.html
@@ -286,10 +286,10 @@ $(document).ready(function () {
   <a href="regression.html">Regression Analysis</a>
 </li>
 <li>
-  <a href="map.html">Maps</a>
+  <a href="mapping.html">Maps</a>
 </li>
 <li>
-  <a href="http://github.com/&lt;YOUR_GH_NAME&gt;/">
+  <a href="https://github.com/Veraverax/p8105_final/">
     <span class="fa fa-github fa-lg"></span>
      
   </a>
