--- a/regression.html
+++ b/regression.html
@@ -15,7 +15,7 @@
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/cerulean.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/journal.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
@@ -107,33 +107,33 @@ summary {
 <style type="text/css">
 /* padding for bootstrap navbar */
 body {
-  padding-top: 51px;
+  padding-top: 61px;
   padding-bottom: 40px;
 }
 /* offset scroll position for anchor links (for fixed navbar)  */
 .section h1 {
-  padding-top: 56px;
-  margin-top: -56px;
+  padding-top: 66px;
+  margin-top: -66px;
 }
 .section h2 {
-  padding-top: 56px;
-  margin-top: -56px;
+  padding-top: 66px;
+  margin-top: -66px;
 }
 .section h3 {
-  padding-top: 56px;
-  margin-top: -56px;
+  padding-top: 66px;
+  margin-top: -66px;
 }
 .section h4 {
-  padding-top: 56px;
-  margin-top: -56px;
+  padding-top: 66px;
+  margin-top: -66px;
 }
 .section h5 {
-  padding-top: 56px;
-  margin-top: -56px;
+  padding-top: 66px;
+  margin-top: -66px;
 }
 .section h6 {
-  padding-top: 56px;
-  margin-top: -56px;
+  padding-top: 66px;
+  margin-top: -66px;
 }
 .dropdown-submenu {
   position: relative;
@@ -362,10 +362,10 @@ div.tocify {
   <a href="regression.html">Regression Analysis</a>
 </li>
 <li>
-  <a href="map.html">Maps</a>
+  <a href="mapping.html">Maps</a>
 </li>
 <li>
-  <a href="http://github.com/&lt;YOUR_GH_NAME&gt;/">
+  <a href="https://github.com/Veraverax/p8105_final/">
     <span class="fa fa-github fa-lg"></span>
      
   </a>
@@ -397,11 +397,9 @@ library(mgcv)</code></pre>
 <pre><code>## This is mgcv 1.8-33. For overview type &#39;help(&quot;mgcv-package&quot;)&#39;.</code></pre>
 <pre class="r"><code>red_df =  read_csv(&quot;./wine_data/tidy/wine_red.csv&quot;)</code></pre>
 <pre><code>## Warning: Missing column names filled in: &#39;X1&#39; [1]</code></pre>
-<pre><code>## Warning: Duplicated column names deduplicated: &#39;X1&#39; =&gt; &#39;X1_1&#39; [2]</code></pre>
 <pre><code>## Parsed with column specification:
 ## cols(
 ##   X1 = col_double(),
-##   X1_1 = col_double(),
 ##   country = col_character(),
 ##   description = col_character(),
 ##   designation = col_character(),
@@ -414,16 +412,15 @@ library(mgcv)</code></pre>
 ##   variety = col_character(),
 ##   winery = col_character(),
 ##   year = col_double(),
+##   new_world = col_logical(),
+##   old_world = col_logical(),
 ##   type = col_character()
 ## )</code></pre>
 <pre class="r"><code>white_df = read_csv(&quot;./wine_data/tidy/wine_white.csv&quot;) </code></pre>
-<pre><code>## Warning: Missing column names filled in: &#39;X1&#39; [1]
-
-## Warning: Duplicated column names deduplicated: &#39;X1&#39; =&gt; &#39;X1_1&#39; [2]</code></pre>
+<pre><code>## Warning: Missing column names filled in: &#39;X1&#39; [1]</code></pre>
 <pre><code>## Parsed with column specification:
 ## cols(
 ##   X1 = col_double(),
-##   X1_1 = col_double(),
 ##   country = col_character(),
 ##   description = col_character(),
 ##   designation = col_character(),
@@ -436,6 +433,8 @@ library(mgcv)</code></pre>
 ##   variety = col_character(),
 ##   winery = col_character(),
 ##   year = col_double(),
+##   new_world = col_logical(),
+##   old_world = col_logical(),
 ##   type = col_character()
 ## )</code></pre>
 <pre class="r"><code>red_df_reg =
