mapping final edits

--- a/about.html
+++ b/about.html
@@ -340,8 +340,8 @@ $(document).ready(function () {
 <p><br></br></p>
 </div>
 <div id="helen-zhang" class="section level1">
-<h1><a href=""><img class="cat_circle" src="image/test.jpg"></a><span style="padding-left:25px">Helen Zhang</h1>
-<p>ABOUT placeholder</p>
+<h1><a href=""><img class="cat_circle" src="image/helen.jpg"></a><span style="padding-left:25px">Helen Zhang</h1>
+<p>My name is Helen and I’m in the Epidemiology Department with a certificate in CEOR. Prior to graduate school, I received my BS in Microbiology from University of Wisconsin-Madison. My professional interests are real-world data and outcomes research.</p>
 <p><br></br></p>
 </div>
 <div id="yuanxin-yolanda-zhang" class="section level1">
