--- a/index.html
+++ b/index.html
@@ -284,6 +284,9 @@ $(document).ready(function () {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
+      <a href="data_intro.html">About the Data</a>
+    </li>
+    <li>
       <a href="plotly.html">Exploratory Graphs</a>
     </li>
     <li>
@@ -328,6 +331,7 @@ $(document).ready(function () {
 </div>
 
 
+<p><br></p>
 <h6 style="text-align: center;">
 Vera Xu (yx2578) | Tianheng Hu (th2533) | Helen Zhang (hlz2108) | Yuanxin Zhang (yz3736)
 </h6>
@@ -340,16 +344,6 @@ Vera Xu (yx2578) | Tianheng Hu (th2533) | Helen Zhang (hlz2108) | Yuanxin Zhang 
 <div id="introduction" class="section level2">
 <h2>Introduction</h2>
 <p>With wine consumption in the U.S. at an all-time high, there are a huge amount of varieties of wine on the market. Consumers are more eager to learn about how to pick a good wine. There are many review systems online such as Vinno, Wine Enthusiasts. It is important for the consumers to learn what is behind those ratings. This data offers us a great opportunity to explore what factors are associated with wine ratings. We hope to conduct regression analysis of the wine rating and price based on location/grape type/notes/region to see if there are significant differences among these factors.The regression model would help customers estimate and predict wine rating with a series of wine characteristics. We also want to provide people with a interactive website to visualize wine ratings and prices.</p>
-</div>
-<div id="dataset" class="section level2">
-<h2>Dataset</h2>
-<p>The data for this project is downloaded from <a href="https://www.kaggle.com/zynicide/wine-reviews">Kaggle</a>. It was scraped on November 22nd, 2017 from the <a href="https://www.winemag.com/?s=&amp;drink_type=wine">WineEnthusiast Rating database</a>. Wine Enthusiast is a magazine provide information on wine quality, wine variety, tours and events—in short - everything about wine.</p>
-<p>This dataset contains 130k wine reviews with variety, location, winery, price, description and reviewer information. There is much information on description and title on each wine. We had extracted from the text of useful information such as the year the wine was made in and the characteristics of the taste.</p>
-<p>At first, the dataset contains more than 50 wine varieties and it is hard to get useful information. Therefore, we had categorized all varieties to four types of wine: red, white, rose and sparkling according to the following infographics on <a href="https://winefolly.com/deep-dive/different-types-of-wine/">Wine Folly</a>.</p>
-<p><br></br></p>
-<h6 style="text-align: center;">
-<img src="image/wine_types.jpg" style="width:75%">
-</h6>
 </div>
 <div id="fun-facts" class="section level2">
 <h2>Fun facts</h2>
