--- a/about.html
+++ b/about.html
@@ -336,7 +336,9 @@ $(document).ready(function () {
 <h1><a href=""><img class="cat_circle" src="image/wine_words.jpg"></a><span style="padding-left:25px">Tianheng (Jady) Hu</h1>
 <p>I’m Jady, a second year MPH student in Biostatistics at Columbia University Mailman School of Public Health. My professional interests include data science, clinical trial methodology and health policy management. My favorite wine is called Josh and wine type is rose.</p>
 <p><br></br></p>
-<p>#<a href=""><img class="circle" src="image/vera.jpg"></a><span style="padding-left:25px"> Veru Xu</p>
+</div>
+<div id="veru-xu" class="section level1">
+<h1><a href=""><img class="circle" src="image/vera.jpg"></a><span style="padding-left:25px"> Veru Xu</h1>
 <p>I’m Vera, also a 2nd year MPH student in Biostatistics. My professional interest is in healthcare and management consulting. In my spare time, I actually drink wine very frequently. My favorite bottle of wine is Hess Select Cabernet Sauvignon 2016 - it’s not pricy, of great structure and a good choice to pair with red meat.</p>
 <p><br></br></p>
 </div>
@@ -347,6 +349,8 @@ $(document).ready(function () {
 </div>
 <div id="yuanxin-yolanda-zhang" class="section level1">
 <h1><a href=""><img class="cat_circle" src="image/wine_bottle.jpg"></a><span style="padding-left:25px">Yuanxin (Yolanda) Zhang</h1>
+<p>I’m Yolanda, a second year MPH student in Biostatistics, pursuing a certificate in Advanced Epidemiology. I obtained my BS in Statistics from University of California, Davis. I am interested in clinical research and my career goal is to become a biostatistician in pharmaceutical industry. My favorite wine type is reisling.</p>
+<p><br></br></p>
 <p>ABOUT</p>
 <p><br></br></p>
 </div>
