--- a/about.html
+++ b/about.html
@@ -333,8 +333,8 @@ $(document).ready(function () {
 
 <p><br></br></p>
 <div id="tianheng-jady-hu" class="section level1">
-<h1><a href=""><img class="cat_circle" src="image/wine_words.jpg"></a><span style="padding-left:25px">Tianheng (Jady) Hu</h1>
-<p>I’m Jady, a second year MPH student in Biostatistics at Columbia University Mailman School of Public Health. My professional interests include data science, clinical trial methodology and health policy management. My favorite wine is called Josh and wine type is rose.</p>
+<h1><a href=""><img class="cat_circle" src="image/jady.jpg"></a><span style="padding-left:25px">Tianheng (Jady) Hu</h1>
+<p>I’m Jady, a second year MPH student in Biostatistics at Columbia University Mailman School of Public Health. I received my BS in Statistics and Economics from Boston University. My professional interests include data science and clinical trial methodology. My favorite wine is called Josh and wine type is rose.</p>
 <p><br></br></p>
 </div>
 <div id="veru-xu" class="section level1">
