update home page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Wine Rating - What’s behind great wines?</title>
+<title>index.utf8</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -326,28 +326,35 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Wine Rating - What’s behind great wines?</h1>
 
 </div>
 
 
 <p><br></p>
+<h1 style="text-align: center;" markdown="1">
+<p>Wine Rating - What’s behind great wines?</p>
 <h6 style="text-align: center;">
 Vera Xu (yx2578) | Tianheng Hu (th2533) | Helen Zhang (hlz2108) | Yuanxin Zhang (yz3736)
 </h6>
 <br></br>
 <h6 style="text-align: center;">
-<img src="image/main_pic.jpg" style="width:75%">
+<img src="image/main_pic.jpg" style="width:50%">
 </h6>
 <p>(Wordcloud)</p>
 <div id="introduction" class="section level2">
 <h2>Introduction</h2>
-<p>Wine is one of the most commonly seen alcoholic drinks. With wine consumption in the U.S. at an all-time high, there are a huge amount of varieties of wine on the market. Consumers are more eager to learn about how to pick a good wine. There are many review systems online such as Vinno, Wine Enthusiasts. It is important for the consumers to learn what is behind those ratings. This data offers us a great opportunity to explore what factors are associated with wine ratings. We hope to conduct regression analysis of the wine rating and price based on location/grape type/notes/region to see if there are significant differences among these factors.The regression model would help customers estimate and predict wine rating with a series of wine characteristics. We also want to provide people with a interactive website to visualize wine ratings and prices.</p>
+<p>Wine is one of the most commonly seen alcoholic drinks. With wine consumption in the U.S. at an all-time high, there are a huge amount of varieties of wine on the market. Consumers are more eager to learn about how to pick a good wine. There are many review systems online such as Vinno, Wine Enthusiasts. It is important for the consumers to learn what is behind those ratings.</p>
+<p>This data offers us a great opportunity to explore what factors are associated with wine ratings. We hope to conduct regression analysis of the wine rating and price based on location/grape type/notes/region to see if there are significant differences among these factors.The regression model would help customers estimate and predict wine rating with a series of wine characteristics. We also want to provide people with a interactive website to visualize wine ratings and prices.</p>
+<p><br></p>
 </div>
-<div id="fun-facts" class="section level2">
-<h2>Fun facts</h2>
-<p>A quick summary of our findings include:</p>
-<p>Data scraping of clinicaltrials.gov is difficult Out of 10,000 trials prior to 2017, only 39 met our criteria for calculating the fragility index. California has by far the most number of clinical trials out of available data For detailed results, analysis and output, please refer to our report.</p>
+<div id="fun-facts-summary" class="section level2">
+<h2>Fun Facts Summary</h2>
+<ul>
+<li><p>2002 was the year of highest average wine price for sparkling wine - above $100!</p></li>
+<li><p>2004 was the year of highest average wine price for white wine - above $50!</p></li>
+<li><p>Relationship between wine price and rating are segmented - see details in <a href="regression.html">regression analyses</a>!</p></li>
+<li><p>England was the country of highest wine rating overall - average rating was 92/100.</p></li>
+</ul>
 </div>
 
 
